maj deck eni/ml vue du cul + some shared/latex/ pour harmoniser les noms de section et les frametitle

--- a/eni/ml-vue-d-ensemble-1J/j1/actors-gafa.tex
+++ b/eni/ml-vue-d-ensemble-1J/j1/actors-gafa.tex
@@ -1,36 +1,149 @@
-\subsection{template}
+\subsection{La recherche dans le monde}
 
 \begin{frame}
-  \frametitle{title}
-\end{frame}
-
-\begin{frame}
-  \frametitle{template}
-
-  \imgtw[0.1]{logo_mlweek}
-  
+  \frametitle{La recherche privée}
+  Les GAFA :
   \begin{itemize}
-  \item 
-  \item 
-  \item 
-  \item 
+  \item Google (+Deepmind)
+  \item Amazon (AWS)
+  \item Facebook (FAIR)
+  \item Apple 
+  \item IBM (Watson)
+  \item Microsoft (Azure)
+  \item Baidu
+  \item Elon Musk (OpenAI)
   \end{itemize}
-
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-
-  \begin{minipage}[l]{0.49\linewidth}
-      \begin{itemize}
-      \item 
-      \item 
-      \item 
-      \item 
-      \end{itemize}
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-
+  Beaucoup de développement open-source de la part de Google, Facebook et Baidu
 \end{frame}
 
+\begin{frame}
+  \frametitle{La recherche académique}
+  \imgth[0.9]{citation-nips-2005-2016}
+\end{frame}
+
+\begin{frame}
+  \frametitle{La recherche académique privatisée}
+  Acteurs de la recherche en machine learning
+  \imgth[0.9]{citation-nips-2005-2016-team}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  IBM et Watson
+  \imgtw[0.6]{jeopardy-watson}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  APIs Watson de traitement du langage : \\
+  \begin{minipage}[c]{0.49\linewidth}
+    \begin{itemize}
+    \item Scripting
+    \item Extraction de connaissance
+    \item Analyse de personalité
+    \item Traduction
+    \end{itemize}
+  \end{minipage}\hfill
+  \begin{minipage}[c]{0.50\linewidth}
+    \begin{itemize}
+    \item STT, TTS
+    \item Analyse de l'émotion
+    \item Chatbots préconfigurés
+    \end{itemize}
+  \end{minipage}\hfill
+  \imgtw[0.75]{watson-personality-insight}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  APIs Watson :
+  \begin{itemize}
+  \item Reconnaissance d'image
+  \item Machine learning
+  \item Oncologie
+  \item Cybersécurity
+  \item ...
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  IBM et Watson
+  \imgtw[1]{ibm-watson-struct}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  Microsoft Azure
+  \imgtw[1]{ms-azure}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  Microsoft Azure
+  \newline
+  (Déc 2018) supporte scikit-learn, PyTorch et TensorFlow
+  \imgtw[1]{ms-azure2}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  Amazon
+  \imgtw[0.9]{amazon-ai}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  Facebook
+  \begin{itemize}
+  \item Bot framework
+  \item DeepFace
+  \item Rosetta (Reco. text in video)
+  \item SapFix et Sapienz 
+  \item Diverses APIs deep learning
+  \item Mise à dispo. de corpus et modèles (texte, voix, image, raisonnement,...)
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  Google
+  \begin{itemize}
+  \item Traduction
+  \item Traitement d'image/Vidéo
+  \item Voix
+  \item Agent conversationnel (\href{https://www.youtube.com/watch?v=d40jgFZ5hXk}{\blue{Démo}})
+  \item Robotique (boston dynamics)
+  \item Domotique (Google home)
+  \item Santé (Google Health)
+  \item Renforcement (Go, Echec, Atari, Starcraft,...)
+  \item ...
+  \item Publications nombreuses avec dépots open source
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  Baidu
+  \begin{itemize}
+  \item Traduction
+  \item Traitement d'image/Vidéo
+  \item Voix
+  \item Agent conversationnel
+  \item Robotique
+  \item Domotique
+  \item Santé
+  \item Renforcement
+  \item ...
+  \item De plus en plus de publications et dépots open-source
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les acteurs business}
+  Apple
+  \begin{itemize}
+  \item ???
+  \item Première publication scientifique (publique) en 2016
+  \end{itemize}
+\end{frame}
