--- a/eni/ml-vue-d-ensemble-1J/j1/actors-startup.tex
+++ b/eni/ml-vue-d-ensemble-1J/j1/actors-startup.tex
@@ -1,24 +1,22 @@
 \subsection{dans le monde (et un peu en france)}
 
-
-
 \begin{frame}
-  \frametitle{Les acteurs de l'intelligence artificielle}
+  \frametitle{Tendance}
   \imgtw{trends-ia-tektonik}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les acteurs de l'intelligence artificielle}
+  \frametitle{World Map}
   \imgtw{ia-landscape-2018}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les acteurs de l'intelligence artificielle}
+  \frametitle{French Map}
   \imgtw[1.0]{ia-landscape-fr-2018-2}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les acteurs de l'intelligence artificielle}
+  \frametitle{Les Startups en France}
   Top 10 :
   \begin{itemize}
   \item Algolia (moteur de recherche BtoB)
@@ -35,7 +33,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les acteurs de l'intelligence artificielle}
+  \frametitle{Les Startups en France}
   La stratégie de recherche en IA en France :
   \begin{itemize}
   \item 1.5 Millards d'euros sur 5 ans
