--- a/eni/ml-vue-d-ensemble-1J/j1/rl-deep.tex
+++ b/eni/ml-vue-d-ensemble-1J/j1/rl-deep.tex
@@ -1,10 +1,7 @@
-\subsection{Apprentissage par renforcement en deep learning}
-
-
+\subsection{Deep Learning}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement et deep learning}
-  DQN
+  \frametitle{DQN}
   \begin{itemize}
   \item 49 jeux Atari
   \item 210x160 pixels
@@ -14,8 +11,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement et deep learning}
-  DQN
+  \frametitle{DQN}
   \begin{itemize}
   \item input 84x84x4
   \item Récompense [-1,0,+1] suivant les variations de score
@@ -29,7 +25,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement et deep learning}
-  \href{https://www.youtube.com/watch?v=lcVg9hVya-c}{\blue{Démo DQN PONG}}
+  \frametitle{Appliqué au Jeu de Pong}
+  \bluelink{https://www.youtube.com/watch?v=lcVg9hVya-c}{Démo DQN PONG}
 \end{frame}
 
