--- a/eni/ml-vue-d-ensemble-1J/j1/rl-intro.tex
+++ b/eni/ml-vue-d-ensemble-1J/j1/rl-intro.tex
@@ -1,9 +1,7 @@
-\subsection{Apprentissage par renforcement}
-
-
+\subsection{Introduction}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement}
+  \frametitle{Définition}
   \imgtw[0.5]{rl}
   où :
   \newline
@@ -15,8 +13,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement}
-  \underline{Des contraintes techniques} :
+  \frametitle{Des contraintes techniques}
   \begin{itemize}
   \item L'environnement n'est pas forcément parfaitement modélisable
   \item La récompense n'est pas forcément calculable immédiatement
@@ -24,12 +21,13 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement}
+  \frametitle{Des contraintes techniques}
+    \red{Environnement modélisable ? Récompense calculable ?}
   \imgth[0.6]{bourse-ny}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement}
+  \frametitle{Des contraintes techniques}
   \begin{center}
     \red{Environnement modélisable ? Récompense calculable ?}
   \end{center}
@@ -37,7 +35,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement}
+  \frametitle{Des contraintes techniques}
   \begin{center}
     \red{Environnement modélisable ? Récompense calculable ?}
   \end{center}
@@ -50,7 +48,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement}
+  \frametitle{Des contraintes techniques}
   \imgth[0.7]{go}
   \begin{center}
     \huge{$\approx 10^{600}$}
@@ -58,7 +56,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement}
+  \frametitle{Des contraintes techniques}
   \underline{Des contraintes techniques} :
   \begin{itemize}
   \item L'environnement n'est pas forcément parfaitement modélisable
@@ -68,7 +66,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement}
+  \frametitle{Des contraintes techniques}
   \imgth[0.6]{voyageur-commerce}
 \end{frame}
 
