--- a/eni/ml-vue-d-ensemble-1J/j1/sectors-coding.tex
+++ b/eni/ml-vue-d-ensemble-1J/j1/sectors-coding.tex
@@ -1,4 +1,3 @@
-\subsection{Secteurs en mouvement}
 \subsection{Informatique}
 
 \begin{frame}
@@ -62,8 +61,8 @@
   \item Détection de faille de sécurité dans le code
   \item Détection de quasi-duplication de code
   \item Analyse de dépendances
-  \item \href{https://www.youtube.com/watch?v=ZD8Cnzc6KlY}{\blue{Prototypage de code}}
-  \item \href{http://code2vec.org/}{\blue{Génération de nom de fonction}}
+  \item \bluelink{https://www.youtube.com/watch?v=ZD8Cnzc6KlY}{Prototypage de code}
+  \item \bluelink{http://code2vec.org/}{Génération de nom de fonction}
   \item ...
   \end{itemize}
 \end{frame}
