--- a/eni/ml-vue-d-ensemble-1J/j1/sectors-intro.tex
+++ b/eni/ml-vue-d-ensemble-1J/j1/sectors-intro.tex
@@ -1,15 +1,14 @@
-\subsection{Les secteurs impactés par le machine learning}
-\subsection{et les tendances à venir}
+\subsection{Introduction}
 
 \begin{frame}
-  \frametitle{Les secteurs impactés par le machine learning}
+  \frametitle{Les secteurs impactés}
   \begin{center}
     \huge TOUS ! (ou presque)
   \end{center}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les secteurs impactés par le machine learning}
+  \frametitle{Les secteurs impactés}
   \begin{center}
     La tendance est aux réseaux de neurones
   \end{center}
@@ -23,7 +22,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les secteurs impactés par le machine learning}
+  \frametitle{Les secteurs impactés}
   Si il y a des données, il y a du machine learning :
   \newline
   \newline
@@ -55,7 +54,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les secteurs impactés par le machine learning}
+  \frametitle{Les secteurs impactés}
   Journalisme
   \imgtw{jt-chine}
 \end{frame}
