--- a/eni/ml-vue-d-ensemble-1J/j1/vision.tex
+++ b/eni/ml-vue-d-ensemble-1J/j1/vision.tex
@@ -77,7 +77,7 @@
 \begin{frame}
   \frametitle{Traitement d'image}
   Convolutional Neural Network (\textbf{CNN})
-  \imgtw{cnn}
+  \imgtw{cnn-schema}
   'Quelques' millions de paramètres dans le modèle
 \end{frame}
 
