--- a/shared/latex/ml-craftmoncul.tex
+++ b/shared/latex/ml-craftmoncul.tex
@@ -1,13 +1,12 @@
 \subsection{Mettre en place un transition IA}
-\subsection{Développer un projet en Machine Learning}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Rappels}
   \imgtw[0.8]{ml-craftmanship}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Rappels}
   \begin{itemize}
   \item \underline{Séparer} les données en TRAIN/VALIDATION/TEST (i.e 60/20/20)
   \item \underline{Apprendre} sur \textbf{TRAIN}
@@ -17,13 +16,12 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Effort Vs Utilité}
   \imgtw[0.8]{ml-effort-vs-value}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
-  Projet académiques Vs Industriels
+  \frametitle{Projet académiques Vs Industriels}
   \begin{itemize}
   \item $\neq$ Développement logiciel
   \item $\neq$ Infrastructure
@@ -32,7 +30,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Projet académiques Vs Industriels}
   \begin{center}
     Développement logiciel
   \end{center}
@@ -68,7 +66,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Projet académiques Vs Industriels}
   \begin{center}
     Infrastructure
   \end{center}
@@ -102,7 +100,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Rappel}
   Un problème d'ingénérie avant d'être un problème de machine learning : \\
   \begin{center}
     \textbf{Données et prétraitements de qualité > algorithme de qualité}
@@ -110,7 +108,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Exemple}
   Une approche en 4 étapes :
   \begin{itemize}
   \item Créer un pipeline robuste de bout en bout (sans ML)
@@ -121,7 +119,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Exemple}
   Créer un pipeline robuste de bout en bout (sans ML) :
   \begin{itemize}
   \item Une baseline avec une heuristique
@@ -130,7 +128,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Exemple}
   Intégrer du ML simple :
   \begin{itemize}
   \item Obtenir des données
@@ -142,7 +140,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Exemple}
   Intégrer du ML simple :
   \begin{itemize}
   \item Apprendre un modèle tous les n-jours
@@ -156,7 +154,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Exemple}
   Ajouter des caractérstiques sensées :
   \begin{itemize}
   \item Beaucoup de caractéristiques simples > peu de caractéristiques complexes
@@ -167,7 +165,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Développer un projet en Machine Learning}
+  \frametitle{Exemple}
   Des questions à garder en tête :
   \begin{itemize}
   \item Ajouter des statistiques d'évaluation ?
