--- a/shared/latex/ml-data-preparation.tex
+++ b/shared/latex/ml-data-preparation.tex
@@ -1,13 +1,13 @@
 \subsection{Data Mining}
 
 \begin{frame}
-  \frametitle{Data Mining}
+  \frametitle{Introduction}
   \imgtw[0.8]{ml-craftmanship}
 \end{frame}
 
 
 \begin{frame}
-  \frametitle{Data Mining}
+  \frametitle{Biais Statistiques}
   Attention aux différents biais de vos données !
   \begin{itemize}[<+->]
   \item \red{variables confondantes} (Ex : ``obésité'' dans la corrélation entre ``conso. viande'' et ``cancer colon'')
@@ -25,7 +25,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Data Mining}
+  \frametitle{A Retenir !}
   \begin{center}
     Meilleures données $>$ Meilleurs modèles \\
     (trash-in, trash-out) \\
