--- a/shared/latex/ml-learn.tex
+++ b/shared/latex/ml-learn.tex
@@ -23,12 +23,12 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Outils — courbe ROC}
+  \frametitle{Évaluation — Outils — courbe ROC}
   \imgtw[.6]{roc}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Outils — courbe ROC}
+  \frametitle{Évaluation — Outils — courbe ROC}
   \imgtw[.6]{roc-space}
 \end{frame}
 
