--- a/shared/latex/nn-intro.tex
+++ b/shared/latex/nn-intro.tex
@@ -16,17 +16,17 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseau de Neurones}
+  \frametitle{Les Neurones Biologiques}
   \imgtw[0.9]{biological-neuron}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseau de Neurones}
+  \frametitle{Neurones Artificiels}
   \imgtw[0.9]{neuron-model}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseau de Neurones}
+  \frametitle{Formulation Matricielle}
   \[
   \sigma \left(
   \begin{bmatrix}
@@ -64,7 +64,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseaux de neurones : Fonction d'activation $\sigma$}
+  \frametitle{Fonction d'activation $\sigma$}
   \begin{itemize}
   \item Sigmoïde
   \item Tanh
@@ -75,13 +75,13 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseaux de neurones : un Potentiel infini}
+  \frametitle{des capacités sans limites}
   \textbf{1991} : \textbf{Kurt Hornik} : Théorème d'approximation universelle
   \imgtw[0.8]{universal-approximation}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseaux de neurones : Fonction d'activation $\sigma$}
+  \frametitle{Fonction d'activation $\sigma$}
   Sigmoïde
   \imgth[0.6]{sigmoid}
   \[
@@ -90,7 +90,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseaux de neurones : Fonction d'activation $\sigma$}
+  \frametitle{Fonction d'activation $\sigma$}
   \[
   \tanh(x)=\frac{1-\exp{-2*x}}{1+\exp{-2*x}}
   \]
@@ -101,7 +101,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseaux de neurones : Fonction d'activation $\sigma$}
+  \frametitle{Fonction d'activation $\sigma$}
   \[
   \mathit{Softmax}(x_j)=\frac{\exp{x_j}}{\sum_{i=1}^n{\exp{x_i}}}
   \]
@@ -120,7 +120,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseaux de neurones : Fonction d'activation $\sigma$}
+  \frametitle{Fonction d'activation $\sigma$}
   \begin{minipage}[c]{0.39\linewidth}
     \imgtw[0.9]{relu}
   \end{minipage}\hfill
@@ -130,16 +130,16 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseau de Neurones}
+  \frametitle{Une seule couche}
   \imgtw[0.8]{neural-network-small}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseau de Neurones}
+  \frametitle{Une couche cachée}
   \imgtw[0.8]{neural-network}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Réseau de Neurones}
+  \frametitle{Réseau Profond : Deep Learning !}
   \imgtw[0.8]{deep-net}
 \end{frame}
