--- a/shared/latex/nn-lstm.tex
+++ b/shared/latex/nn-lstm.tex
@@ -1,9 +1,7 @@
 \subsection{Long-Short Term Memory}
 
-
-
 \begin{frame}
-  \frametitle{Long-Short Term Memory}
+  \frametitle{Schéma}
   \imgtw[0.7]{lstm-schema}
   \begin{itemize}
   \item $F_{t}=\sigma (W_{F}*x_{t}+U_{F}*h_{t-1}+b_{F})\;\;\;\;\;\;\,$ (forget gate)
@@ -16,7 +14,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Long-Short Term Memory}
+  \frametitle{Intérêt}
   vanishing gradient ``résolu'' (ou presque)
   \imgtw{vanishing-gradient-lstm}
 \end{frame}
