--- a/shared/latex/problematiques-juridique.tex
+++ b/shared/latex/problematiques-juridique.tex
@@ -1,12 +1,12 @@
 \subsection{Questionnements Juridiques}
 
 \begin{frame}
-  \frametitle{Questionnements Juridiques}
+  \frametitle{CNIL}
   \imgtw[0.8]{cnil-logo}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Questionnements Juridiques}
+  \frametitle{CNIL}
   Ethique et Intelligence artificielle (Comité 2017)
   Recommandations :
   \begin{itemize}
@@ -20,13 +20,12 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Questionnements Juridiques}
+  \frametitle{RGPD}
   2018
   \imgtw[0.8]{rgpd}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Questionnements Juridiques}
-  Loi bioéthique :
+  \frametitle{Loi bioéthique}
   Le ``traitement algorithmique de données massives'' pour des ``actes à visée préventive, diagnostique ou thérapeutique'', le professionnel de santé sera tenu d'informer le patient ``de cette utilisation et des modalités d’action de ce traitement``.
 \end{frame}
