--- a/shared/latex/sequential-data.tex
+++ b/shared/latex/sequential-data.tex
@@ -1,7 +1,7 @@
 \subsection{Les Données Séquentielles}
 
 \begin{frame}
-  \frametitle{Les Données Séquentielles}
+  \frametitle{Définition}
   \begin{center}
     \textbf{Données ancrées dans le temps} \\
     $\;$ \\
@@ -10,7 +10,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les Données Séquentielles}
+  \frametitle{Exemples}
   Soit $X=(x_i)_{1<i<k}$ un ensemble de k exemples : \\
   où : \\
   $x_i = (x_{i}^1 , ... , x_{i}^{n_i})$ avec $x_i$ une séquence de $n_i$ frames \\
@@ -28,7 +28,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les Données Séquentielles}
+  \frametitle{Exemples}
   \underline{Texte} \\
   1: lorem ipsum dolor sit amet, consectetur adipiscing elit, ... \\
   2: Great minds discuss ideas; average minds discuss events; small minds discuss people. \\
@@ -37,7 +37,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les Données Séquentielles}
+  \frametitle{Exemples}
   \underline{A.D.N} \\
   1: ATGCGATCTATCGCTAGCCGCGCTATACGCA \\
   2: GATTATAGCTAGCTCGCGCTATATCGCTAGCTAGCTAGCTAGC \\
@@ -45,19 +45,19 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les Données Séquentielles}
+  \frametitle{Exemples}
   \underline{Son}
   \imgth[0.8]{fourier}  
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les Données Séquentielles}
+  \frametitle{Exemples}
   \underline{Video}
   \imgtw[0.7]{video-frames}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les Données Séquentielles}
+  \frametitle{Exemples}
   \begin{itemize}
   \item Météo (time, Lat., Long., T°, P, $X_{vent}$, $Y_{vent}$, $Q_{pluie}$)
   \item Santé (time, T°, Pouls, ...)
