--- a/eni/ml-vue-d-ensemble-1J/j1/actors-chine.tex
+++ b/eni/ml-vue-d-ensemble-1J/j1/actors-chine.tex
@@ -1,15 +1,11 @@
-\subsection{Le cas particulier de la chine}
-
-
+\subsection{Le cas particulier de la Chine}
 
 \begin{frame}
-  \frametitle{Les acteurs de l'intelligence artificielle}
   \imgtw{chine-s-eveille}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Les acteurs de l'intelligence artificielle}
-  Une hégémonie dans l'IA annoncée pour 2025 :
+  \frametitle{Une hégémonie dans l'IA annoncée pour 2025}
   \begin{itemize}
   \item Baidu, Alibaba et Tencent disposent de plus de données que les Etats-Unis et l’Europe réunis.
   \item 48\% des investissements mondiaux dans les startup en 2017
