--- a/eni/ml-vue-d-ensemble-1J/j1/nn-gan-intro.tex
+++ b/eni/ml-vue-d-ensemble-1J/j1/nn-gan-intro.tex
@@ -1,9 +1,7 @@
 \subsection{(\textbf{Petit jeu de rapidité})}
 
-
-
 \begin{frame}
-  \frametitle{GAN}
+  \frametitle{Que voyez-vous ?}
   \begin{minipage}[l]{0.49\linewidth}
     \imgtw[1.0]{gan-horse-zebra}
   \end{minipage}\hfill
@@ -13,17 +11,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{GAN}
-  \imgth[0.8]{gan-faux-visages}
-\end{frame}
-
-\begin{frame}
-  \frametitle{GAN}
-  \imgth[0.8]{cyclegan}
-\end{frame}
-
-\begin{frame}
-  \frametitle{GAN}
+  \frametitle{Que voyez-vous ?}
   \imgth[0.8]{gan-faux-visages}
 \end{frame}
 
