--- a/eni/ml-vue-d-ensemble-1J/j1/nn-gan.tex
+++ b/eni/ml-vue-d-ensemble-1J/j1/nn-gan.tex
@@ -1,9 +1,17 @@
 \subsection{Generative Adversarial Network (\textbf{GAN})}
 
-
+\begin{frame}
+  \frametitle{Faux Visages}
+  \imgth[0.8]{gan-faux-visages}
+\end{frame}
 
 \begin{frame}
-  \frametitle{GAN}
+  \frametitle{Faux Zèbre - Faux Cheval}
+  \imgth[0.8]{cyclegan}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Schéma}
   Le générateur n'a jamais vu les vraies données !
   \imgtw[0.8]{gan-schema}
 \end{frame}
