--- a/eni/ml-vue-d-ensemble-1J/j1/sectors-sante.tex
+++ b/eni/ml-vue-d-ensemble-1J/j1/sectors-sante.tex
@@ -1,4 +1,3 @@
-\subsection{Secteurs en mouvement}
 \subsection{La Santé}
 
 \begin{frame}
@@ -17,13 +16,13 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Diagnostique et machine learning}
+  \frametitle{Diagnostique}
   Analyse d'image, d'ECG, données génomiques et phénotypiques
   \imgtw[0.8]{esante-solutions}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Diagnostique et machine learning}
+  \frametitle{Diagnostique}
   Ophtalmologie, analyse d'image
   \newline
   \newline
@@ -43,7 +42,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Diagnostique et machine learning}
+  \frametitle{Diagnostique}
   Oncologie
   \begin{itemize}
   \item cerveau (IRM par Qynapse)
@@ -57,7 +56,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Diagnostique et machine learning}
+  \frametitle{Diagnostique}
   Toutes les pathologies diagnosticables sont potentiellement apprenables
     \begin{itemize}
     \item Cardiologie (échographie, radiographie, IRM, ECG)
@@ -67,7 +66,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Diagnostique et machine learning}
+  \frametitle{Diagnostique}
   Génomique :
   \newline
   \begin{minipage}[c]{0.49\linewidth}
@@ -83,7 +82,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Thérapie et machine learning}
+  \frametitle{Thérapie}
   Exploitation de gros volumes de données (Génomes, publications)
   \newline
   \newline
@@ -97,19 +96,19 @@
 
 
 \begin{frame}
-  \frametitle{Thérapie et machine learning}
+  \frametitle{Thérapie}
   Découverte de molécules (ReLeaSe, ...) 
   \imgtw[0.8]{molecule-release}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Thérapie et machine learning}
+  \frametitle{Thérapie}
   Modélisation de molécules (DeepMind)
   \imgtw[0.8]{foldit}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Thérapie et machine learning}
+  \frametitle{Thérapie}
   \begin{minipage}[c]{0.49\linewidth}
     Simulation biologiques de l'effet de médicaments (IKTOS, Atomwise, ...)
   \end{minipage}\hfill
@@ -119,19 +118,19 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Thérapie et machine learning}
+  \frametitle{Thérapie}
   Robo-chirurgien (Smart Tissue Autonomous Robot)
   \imgth[0.8]{robot-chirurgien}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Thérapie et machine learning}
+  \frametitle{Thérapie}
   Mécanisme de contrôle de prothèses bioniques
   \imgtw[0.8]{bras-bioniques}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Thérapie et machine learning}
+  \frametitle{Thérapie}
   Lunettes pour aveugles (Panda guide, OrCam Technologies)
   \imgtw[0.8]{lunettes-pour-aveugle}
 \end{frame}
