--- a/shared/latex/ml-intro.tex
+++ b/shared/latex/ml-intro.tex
@@ -1,17 +1,17 @@
-\subsection{Machine Learning}
+\subsection{Introduction}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   \imgtw{data-science}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   \imgth[0.8]{ia-ml-deep}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   \begin{center}
   Nouvelle manière d'aborder la \textbf{conception logicielle}.
   \end{center}
@@ -21,12 +21,12 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   \imgtw[0.8]{ml-craftmanship}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   \underline{Définition du besoin} :
   \newline
   \newline
@@ -34,7 +34,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   \textbf{Apprentissage non-supervisé}
   \newline \newline
   Faire émerger des profils, des groupes \\
@@ -43,7 +43,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   \textbf{Apprentissage supervisé}
   \newline \newline
   \textbf{Prédire} une valeur numérique (\textbf{régression}) ou l'appartenance à une classe (\textbf{Classification}) \\
@@ -53,38 +53,38 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   Régression Linéaire : \\
   $Y = a*X + b$
   \imgth[0.7]{regression-line-1}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   Régression Linéaire pour des données en plusieurs dimensions : \\
   $Y = a*X_1 + b*X_2 + c$
   \imgth[0.8]{regression-hyperplan}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   \imgtw[0.8]{variables}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   Régression Logistique (Classification)
   \imgtw[0.65]{mnist}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   Régression Logistique (Classification)
   \imgtw[0.8]{caltech256}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   \textbf{Apprentissage par Renforcement}
   \newline \newline
   Apprendre une \textbf{stratégie} efficace dans un \textbf{univers} où les \textbf{actions} fournissent des \textbf{récompenses} (possiblement négatives)
@@ -100,7 +100,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{~}
   \imgtw[0.8]{ml-illustration}
 \end{frame}
 
