--- a/orsys/mmd/j1/natural-language-processing/similarity-text-reco.tex
+++ b/orsys/mmd/j1/natural-language-processing/similarity-text-reco.tex
@@ -1,7 +1,11 @@
-\subsection{template}
+\begin{frame}
+  \frametitle{template}
+  wesh la similarité de texte
+\end{frame}
 
 \begin{frame}
-  \frametitle{title}
+  \frametitle{template}
+  okapiBM25
 \end{frame}
 
 \begin{frame}
@@ -33,4 +37,3 @@
   \end{minipage}\hfill
 
 \end{frame}
-
