--- a/orsys/mmd/j1/about.tex
+++ b/orsys/mmd/j1/about.tex
@@ -1,5 +1,3 @@
-\subsection{Présentation}
-
 \begin{frame}
   \frametitle{Votre formateur}
   \begin{description}
@@ -12,33 +10,32 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Votre formation — description}
-  Cette formation présente les \textbf{fondamentaux} des \textbf{Machine Learning} et  \textbf{Deep Learning} sur des données textuelles à travers des travaux pratiques. \\
+  \frametitle{Description}
+  Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques. \\
 \end{frame}
 
 \begin{frame}
-  \frametitle{Votre formation — connaissances préalables}
+  \frametitle{Prérequis}
   \begin{itemize}
-  \item Connaissances de base en statistiques et algèbre linéaire
+  \item Connaissances de base en statistiques
   \item Connaissances de base en python
-  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \blue{\underline{\href{https://colab.research.google.com/notebooks/welcome.ipynb}{Google colaboratory}}}
+  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google colaboratory}
   \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Votre formation — objectifs à atteindre}
+  \frametitle{Objectifs pédagogiques}
   \begin{itemize}
   \item Comprendre les différents modèles d'apprentissage
-  \item Modéliser un problème pratique par le machine learning
-  \item Appréhender les spécificités des données textuelles
-  \item Identifier les méthodes adaptées à un problème donnée
-  \item Évaluer la performance de la solution
-  \item Se familiariser avec les librairies scientifiques python (NumPy, seaborn, sikit-learn, ... )
+  \item Modéliser un problème pratique sous forme abstraite
+  \item Identifier les méthodes d'apprentissage pertinentes pour résoudre un problème
+  \item Appliquer et évaluer les méthodes identifiées sur un problème
+  \item Faire le lien entre les différentes techniques d'apprentissage
   \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Votre formation — programme}
+  \frametitle{Emploi du temps}
   \begin{itemize}
   \item 4 jours de 9h à 12h30 et de 14h à 17h30
   \item Le dernier jour on finit à 15h30
@@ -47,25 +44,26 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Votre formation — programme}
+  \frametitle{Programme}
   \begin{itemize}
-  \item Le Text Mining ``classique''
-  \item Les algorithmes supervisés
-  \item 
+  \item Introduction à la modélisation
+  \item Evaluation de modèles prédictifs
+  \item Les algorithmes supervisés/non-supervisés
+  \item Réduction de dimension
   \item Données séquentielles (temporelles)
   \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Votre formation — ressources}
+  \frametitle{Ressources}
   \begin{itemize}
   \item Je vous ferai parvenir les ressources utilisées à chaque début de cours.
-  \item Elles sont aussi accessibles via \blue{\underline{\href{https://myorsys.orsys.fr/}{https://myorsys.orsys.fr/}}}
+  \item Elles sont aussi accessibles via \bluelink{https://myorsys.orsys.fr/}{https://myorsys.orsys.fr/}
   \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Tour de table — présentez-vous}
+  \frametitle{Tour de table}
   \begin{itemize}
   \item Votre nom
   \item Votre métier
@@ -73,4 +71,3 @@
   \item Vos objectifs et vos attentes vis-à-vis de cette formation
   \end{itemize}
 \end{frame}
-
