--- a/orsys/mmd/j1/natural-language-processing/tp-text-reco-system.tex
+++ b/orsys/mmd/j1/natural-language-processing/tp-text-reco-system.tex
@@ -1,7 +1,9 @@
-\subsection{template}
+\begin{frame}
+  \frametitle{template}
+\end{frame}
 
 \begin{frame}
-  \frametitle{title}
+  \frametitle{template}
 \end{frame}
 
 \begin{frame}
@@ -33,4 +35,3 @@
   \end{minipage}\hfill
 
 \end{frame}
-
