mmd update un pti peu regex...

--- a/orsys/mmd/j1/about.tex
+++ b/orsys/mmd/j1/about.tex
@@ -11,7 +11,8 @@
 
 \begin{frame}
   \frametitle{Description}
-  Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques. \\
+  Cette formation présente les techniques de traitement automatique du 
+  \textbf{texte} et du \textbf{langage} à travers des travaux pratiques.
 \end{frame}
 
 \begin{frame}
@@ -26,31 +27,28 @@
 \begin{frame}
   \frametitle{Objectifs pédagogiques}
   \begin{itemize}
-  \item Comprendre les différents modèles d'apprentissage
-  \item Modéliser un problème pratique sous forme abstraite
-  \item Identifier les méthodes d'apprentissage pertinentes pour résoudre un problème
-  \item Appliquer et évaluer les méthodes identifiées sur un problème
-  \item Faire le lien entre les différentes techniques d'apprentissage
+  \item Comprendre les méthodes de la statistique textuelle
+  \item Mettre en oeuvre l'extraction de caractéristiques textuelles
+  \item Choisir un algorithme de classification
+  \item Évaluer les performances prédictives d'un algorithme
   \end{itemize}
 \end{frame}
 
 \begin{frame}
   \frametitle{Emploi du temps}
   \begin{itemize}
-  \item 4 jours de 9h à 12h30 et de 14h à 17h30
-  \item Le dernier jour on finit à 15h30
-  \item À 15h on commence à remplir les documents administratifs.
+  \item 3 jours de 9h à 12h30 et de 14h à 17h30
+  \item Le dernier jour, à 17h on commence à remplir les documents administratifs.
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Programme}
+\begin{frame}{Programme}
   \begin{itemize}
-  \item Introduction à la modélisation
-  \item Evaluation de modèles prédictifs
-  \item Les algorithmes supervisés/non-supervisés
-  \item Réduction de dimension
-  \item Données séquentielles (temporelles)
+  \item Text Mining par la Pratique
+  \item Traitements Automatique du Langage
+  \item Introduction au Machine Learning
+  \item Apprentissage supervisé
+  \item NLP et Deep Learning
   \end{itemize}
 \end{frame}
 
