--- a/orsys/mmd/j1/natural-language-processing/vectors.tex
+++ b/orsys/mmd/j1/natural-language-processing/vectors.tex
@@ -67,8 +67,8 @@
   \frametitle{Word Embeddings} 
   \imgtw[0.6]{word2vec-analogy}
   \begin{center}
-    \blue{\underline{\href{https://projector.tensorflow.org/}{Visualisation de l'espace word2vec}}} \\
-    \blue{\underline{\href{http://vectors.nlpl.eu/repository/}{Word Embeddings à télécharger}}}
+    \bluelink{https://projector.tensorflow.org/}{Visualisation de l'espace word2vec} \\
+    \bluelink{http://vectors.nlpl.eu/repository/}{Word Embeddings à télécharger}
   \end{center}
 \end{frame}
 
