--- a/orsys/mmd/j2/machine-learning/data-preparation.tex
+++ b/orsys/mmd/j2/machine-learning/data-preparation.tex
@@ -195,7 +195,7 @@
   \item visualiser des corrélations linéaires
   \end{itemize}
   Les outils suivants sont sauf mention contraire présents dans
-  \href{https://seaborn.pydata.org/}{\texttt{seaborn}}.
+  \bluelink{https://seaborn.pydata.org/}{\texttt{seaborn}}.
 \end{frame}
 
 \begin{frame}
@@ -211,11 +211,11 @@
 \begin{frame}
   \frametitle{Outils — qq plot}
   \imgtw{qqplot}
-  Attention, pas \href{https://seaborn.pydata.org/}{\texttt{seaborn}}
+  Attention, pas \bluelink{https://seaborn.pydata.org/}{\texttt{seaborn}}
   mais
-  \href{http://www.statsmodels.org/stable/index.html}{\texttt{statsmodel}}
+  \bluelink{http://www.statsmodels.org/stable/index.html}{\texttt{statsmodel}}
   ou
-  \href{https://docs.scipy.org/doc/scipy/reference/stats.html}{\texttt{scipy.stats}}.
+  \bluelink{https://docs.scipy.org/doc/scipy/reference/stats.html}{\texttt{scipy.stats}}.
 \end{frame}
 
 \begin{frame}
