--- a/orsys/mmd/j3/neural-networks/attention-model.tex
+++ b/orsys/mmd/j3/neural-networks/attention-model.tex
@@ -7,7 +7,7 @@
   Modèle à attention pour la traduction
   \imgth[0.8]{attention-model}
   \begin{center}
-    \href{https://demo.allennlp.org/reading-comprehension}{\blue{Démo modèle à attention}}
+    \bluelink{https://demo.allennlp.org/reading-comprehension}{Démo modèle à attention}
   \end{center}
 \end{frame}
 
