--- a/orsys/mmd/j3/tf-keras-intro/tf-intro.tex
+++ b/orsys/mmd/j3/tf-keras-intro/tf-intro.tex
@@ -104,6 +104,6 @@
 
 \begin{frame}
   \frametitle{TensorFlow}
-  \blue{\underline{\href{https://colab.research.google.com/drive/13g9krUBFSxMPKVQwiDOIz9bNUOXlCYdi}{Le code présenté, executable dans colaboratory}}}
+  \bluelink{https://colab.research.google.com/drive/13g9krUBFSxMPKVQwiDOIz9bNUOXlCYdi}{Le code présenté, executable dans colaboratory}
 \end{frame}
 
