--- a/orsys/mmd/j2/machine-learning/tp.tex
+++ b/orsys/mmd/j2/machine-learning/tp.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
-  \blue{\underline{\href{https://drive.google.com/open?id=18UC6cySq3loE7S2t9-Fu_ihMT2nDeJjk}{Quelques fonctions utiles pour les Notebook dans Colaboratory}}} \\
+  \bluelink{https://drive.google.com/open?id=18UC6cySq3loE7S2t9-Fu_ihMT2nDeJjk}{Quelques fonctions utiles pour les Notebook dans Colaboratory} \\
   \newline
   Après avoir ouvert le lien dans Colaboratory :
   \begin{center}
@@ -11,12 +11,12 @@
 
 \begin{frame}
   \frametitle{Travaux Pratiques}
-  \blue{\underline{\href{https://drive.google.com/open?id=1b93dMeJ1wubsVYyNkiCzg_4eaRqFgl51}{Exploration de données-TP}}} \\
+  \bluelink{https://drive.google.com/open?id=1b93dMeJ1wubsVYyNkiCzg_4eaRqFgl51}{Exploration de données-TP} \\
   $\;$ \\
   $\;$ \\
-  \blue{\underline{\href{https://perso.limsi.fr/pointal/_media/python:cours:mementopython3-english.pdf}{python-help}}} \\
-  \blue{\underline{\href{https://github.com/pandas-dev/pandas/blob/master/doc/cheatsheet/Pandas_Cheat_Sheet.pdf}{pandas-help}}} \\
-  \blue{\underline{\href{https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Python_Matplotlib_Cheat_Sheet.pdf}{matplotlib-help}}} \\
+  \bluelink{https://perso.limsi.fr/pointal/_media/python:cours:mementopython3-english.pdf}{python-help} \\
+  \bluelink{https://github.com/pandas-dev/pandas/blob/master/doc/cheatsheet/Pandas_Cheat_Sheet.pdf}{pandas-help} \\
+  \bluelink{https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Python_Matplotlib_Cheat_Sheet.pdf}{matplotlib-help} \\
   (Mais on n'oublie pas la doc ;-) )
 \end{frame}
 
